--- a/index.html
+++ b/index.html
@@ -255,9 +255,11 @@
             <div class="form-group">
               <label for="nachricht" class="form-label">Nachricht</label>
               <textarea id="nachricht" name="nachricht" class="form-control" rows="5" required></textarea>
+              <p id="form-answer"></p>
             </div>
 
             <button type="submit" class="btn btn-dark">Senden</button>
+
           </form>
           <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" class="contact-image img-fluid rounded" alt="landscape image snowy mountain">
         </section>
